prepare poc code highlighting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,5 +9,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- code highlighting -->
+    <link rel="stylesheet" href="{{.appPath}}/assets/vendor/rainbow/tomorrow-night.css">
+    <script src="{{.appPath}}/assets/vendor/rainbow/custom.min.js"></script>
   </body>
 </html>
